OVN v22.03.2 - xx xxx xxxx
--------------------------

OVN v22.03.1 - 03 Jun 2022
--------------------------
   - Bug fixes
  - Replaced the usage of masked ct_label by ct_mark in most cases to work
    better with hardware-offloading.

OVN v22.03.0 - 11 Mar 2022
--------------------------
  - Refactor CoPP commands introducing a unique name index in CoPP NB table.
    Add following new CoPP commands to manage CoPP table:
    - ovn-nbctl copp-add <name> <proto> <meter>
    - ovn-nbctl copp-del <name> <proto>
    - ovn-nbctl copp-list <name>
    - ovn-nbctl ls-copp-add <name> <switch>
    - ovn-nbctl lr-copp-add <name> <router>
  - Support version pinning between ovn-northd and ovn-controller-vtep as an
    option. If the option is enabled and the versions don't match,
    ovn-controller-vtep will not process any DB changes.
  - When configured to log packtes matching ACLs, log the direction (logical
    pipeline) too.
  - Introduce exclude-lb-vips-from-garp in logical_switch_port column in order
    to not advertise lbs VIPs in GARPs sent by the logical router.
  - ACLs now have an "options" column for configuration of extra options.
  - A new ACL option, "log-related" has been added that allows for reply and
    related traffic to be logged for an ACL in addition to the traffic that
    directly matches the ACL.

OVN v21.12.0 - 22 Dec 2021
--------------------------
  - Set ignore_lsp_down to true as default, so that ARP responder flows are
    installed together with other flows when a logical switch port is created,
    without having to wait for the port to be UP.  CMS should set it to false
    if not desired.
  - Added Load_Balancer_Group support, which simplifies large scale
    configurations of load balancers.
  - Introduced infrastructure for VIF plug providers.  When OVN is linked with
    an appropriate VIF plug provider CMS can request OVN to plug lports.  This
    is particularly useful in topologies where the ovn-controller process is